Add mode and compression based parameter support
Initial commit for mode and compression based parameter support. Everything
compiles but the tests are not in a good state and will need to be revisited in
a later commit, once the dust settles.

First, there was a good amount of pre-work in order to support adding
the mode and compression parameters. This includes:
1. Refactors KNNMethodContext and MethodComponentContext to only hold
   the values provided by the user - they dont get updated
2. Expands KNNMethodConfigContext to track additional info such as the
   KNNMethodContext
3. Refactors the KNNVectorFieldType to return more business logic and
   remove the mapping config
4. Setup resolving logic
5. Refactors the KNNVectorFieldMapper

Adds 2 new parameters for either configuring an index or configuring a
model: mode and compression. Right now, the params are no-ops. In the
future, they will control how the backing index is configured.

After this, the majority of the code that needs to know about the method
configuration needs to go through the field type. More tidying up to
come in the future.

Signed-off-by: John Mazanec <jmazane@amazon.com>