@@ -13,6 +13,7 @@ import org.opensearch.knn.KNNTestCase;
 import org.opensearch.knn.common.KNNConstants;
 import org.opensearch.knn.index.*;
 import org.opensearch.knn.index.engine.model.QueryContext;
+import org.opensearch.knn.index.query.rescore.RescoreContext;
 
 import java.io.IOException;
 import java.util.Collections;
@@ -32,15 +33,28 @@ public class AbstractKNNLibraryTests extends KNNTestCase {
         new DefaultHnswSearchContext()
     ) {
         @Override
-        public ValidationException validate(KNNMethodContext knnMethodContext, KNNMethodConfigContext knnMethodConfigContext) {
+        public ValidationException validate(KNNMethodConfigContext knnMethodConfigContext) {
             return new ValidationException();
         }
     };
     private final static String VALID_METHOD_NAME = "test-method-2";
-    private final static KNNLibrarySearchContext VALID_METHOD_CONTEXT = ctx -> ImmutableMap.of(
-        "myparameter",
-        new Parameter.BooleanParameter("myparameter", null, (v, context) -> true)
-    );
+    private final static KNNLibrarySearchContext VALID_METHOD_CONTEXT = new KNNLibrarySearchContext() {
+        @Override
+        public Map<String, Parameter<?>> supportedMethodParameters(QueryContext ctx) {
+            return Map.of("myparameter", new Parameter.BooleanParameter("myparameter", null, (v, context) -> true));
+        }
+
+        @Override
+        public Map<String, Object> processMethodParameters(QueryContext ctx, Map<String, Object> parameters) {
+            return Map.of();
+        }
+
+        @Override
+        public RescoreContext getDefaultRescoreContext(QueryContext ctx) {
+            return null;
+        }
+    };
+
     private final static Map<String, Object> VALID_EXPECTED_MAP = ImmutableMap.of("test-key", "test-param");
     private final static KNNMethod VALID_METHOD = new AbstractKNNMethod(
         MethodComponent.Builder.builder(VALID_METHOD_NAME)
@@ -74,23 +88,15 @@ public class AbstractKNNLibraryTests extends KNNTestCase {
         XContentBuilder xContentBuilder = XContentFactory.jsonBuilder().startObject().field(NAME, "invalid").endObject();
         Map<String, Object> in = xContentBuilderToMap(xContentBuilder);
         KNNMethodContext knnMethodContext1 = KNNMethodContext.parse(in);
-        assertNotNull(TEST_LIBRARY.validateMethod(knnMethodContext1, knnMethodConfigContext));
+        knnMethodConfigContext.setKnnMethodContext(knnMethodContext1);
+        assertNotNull(TEST_LIBRARY.validateMethod(knnMethodConfigContext));
 
         // Invalid - method validation
         xContentBuilder = XContentFactory.jsonBuilder().startObject().field(NAME, INVALID_METHOD_THROWS_VALIDATION_NAME).endObject();
         in = xContentBuilderToMap(xContentBuilder);
         KNNMethodContext knnMethodContext2 = KNNMethodContext.parse(in);
-        expectThrows(IllegalStateException.class, () -> TEST_LIBRARY.validateMethod(knnMethodContext2, knnMethodConfigContext));
-    }
-
-    public void testEngineSpecificMethods() {
-        QueryContext engineSpecificMethodContext = new QueryContext(VectorQueryType.K);
-        assertNotNull(TEST_LIBRARY.getKNNLibrarySearchContext(VALID_METHOD_NAME));
-        assertTrue(
-            TEST_LIBRARY.getKNNLibrarySearchContext(VALID_METHOD_NAME)
-                .supportedMethodParameters(engineSpecificMethodContext)
-                .containsKey("myparameter")
-        );
+        knnMethodConfigContext.setKnnMethodContext(knnMethodContext2);
+        expectThrows(IllegalStateException.class, () -> TEST_LIBRARY.validateMethod(knnMethodConfigContext));
     }
 
     public void testGetKNNLibraryIndexingContext() {
@@ -108,10 +114,7 @@ public class AbstractKNNLibraryTests extends KNNTestCase {
             SpaceType.DEFAULT,
             new MethodComponentContext(VALID_METHOD_NAME, Collections.emptyMap())
         );
-        assertEquals(
-            expectedMap,
-            TEST_LIBRARY.getKNNLibraryIndexingContext(knnMethodContext, knnMethodConfigContext).getLibraryParameters()
-        );
+        assertEquals(expectedMap, TEST_LIBRARY.getKNNLibraryIndexingContext(knnMethodConfigContext).getLibraryParameters());
 
         // Check when invalid method is passed in
         KNNMethodContext invalidKnnMethodContext = new KNNMethodContext(
@@ -119,10 +122,7 @@ public class AbstractKNNLibraryTests extends KNNTestCase {
             SpaceType.DEFAULT,
             new MethodComponentContext("invalid", Collections.emptyMap())
         );
-        expectThrows(
-            IllegalArgumentException.class,
-            () -> TEST_LIBRARY.getKNNLibraryIndexingContext(invalidKnnMethodContext, knnMethodConfigContext)
-        );
+        expectThrows(IllegalArgumentException.class, () -> TEST_LIBRARY.getKNNLibraryIndexingContext(knnMethodConfigContext));
     }
 
     private static class TestAbstractKNNLibrary extends AbstractKNNLibrary {
@@ -155,11 +155,6 @@ public class AbstractKNNLibraryTests extends KNNTestCase {
         }
 
         @Override
-        public int estimateOverheadInKB(KNNMethodContext knnMethodContext, KNNMethodConfigContext knnMethodConfigContext) {
-            return 0;
-        }
-
-        @Override
         public Boolean isInitialized() {
             return null;
         }
@@ -167,6 +162,11 @@ public class AbstractKNNLibraryTests extends KNNTestCase {
         @Override
         public void setInitialized(Boolean isInitialized) {
 
+        }
+
+        @Override
+        protected String doResolveMethod(KNNMethodConfigContext knnMethodConfigContext) {
+            return "";
         }
     }
 }
